// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichField should render a MentionSuggestions component to the DOM if in internal-note mode 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-7"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_bold
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-8"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_italic
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-9"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_underline
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-10"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            link
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-11"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_photo
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-12"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_emoticon
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper wrapper ghost small ghost secondary small"
          id="contactFormButton"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            wysiwyg
          </i>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render a basic input 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-1"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_bold
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-2"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_italic
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-3"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_underline
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-4"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            link
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-5"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_photo
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-6"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_emoticon
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper wrapper ghost small ghost secondary small"
          id="contactFormButton"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            wysiwyg
          </i>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render default content state 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      foo
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-25"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_bold
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-26"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_italic
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-27"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_underline
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-28"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            link
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-29"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_photo
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-30"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_emoticon
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper wrapper ghost small ghost secondary small"
          id="contactFormButton"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            wysiwyg
          </i>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render immutable variable 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html 
                    </span>
                  </span>
                  <div
                    class="d-inline-block align-middle"
                    title="Current agent full name"
                  >
                    <div
                      class="badge-variable badge-variable-type-current_user"
                      contenteditable="false"
                    >
                      <div>
                        <span
                          class="badge-variable-content"
                        >
                          Current agent full name
                        </span>
                      </div>
                      <button
                        class="variable-edit-btn btn btn-sm"
                        title="Edit variable"
                        type="button"
                      >
                        <i
                          class="material-icons"
                        >
                          create
                        </i>
                      </button>
                    </div>
                    <div
                      class="hidden"
                    >
                      <span
                        data-offset-key="123-1-0"
                      >
                        <span
                          data-text="true"
                        >
                          {{current_user.name}}
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-13"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_bold
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-14"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_italic
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-15"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            format_underline
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-16"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            link
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-17"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_photo
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small"
          id="toolbar-button-18"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            insert_emoticon
          </i>
        </button>
        <button
          aria-disabled="false"
          class="wrapper wrapper ghost small ghost secondary small"
          id="contactFormButton"
          type="button"
        >
          <i
            class="material-icons icon"
          >
            wysiwyg
          </i>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render mutable variable 1`] = `
<div>
  <div
    class="rich-textarea-wrapper"
  >
    <div
      class="editor-wrapper"
    >
      <div
        class="withMinHeight"
      >
        <div
          class="DraftEditor-root"
        >
          <div
            class="DraftEditor-editorContainer"
          >
            <div
              aria-autocomplete="list"
              aria-describedby="placeholder-123"
              aria-expanded="true"
              class="notranslate public-DraftEditor-content"
              contenteditable="true"
              role="combobox"
              spellcheck="false"
              style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
            >
              <div
                data-contents="true"
              >
                <div
                  class=""
                  data-block="true"
                  data-editor="123"
                  data-offset-key="123-0-0"
                >
                  <div
                    class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="123-0-0"
                  >
                    <span
                      class="d-inline text-primary"
                    >
                      <span
                        data-offset-key="123-0-0"
                      >
                        <span
                          data-text="true"
                        >
                          {{current_user.name}}
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-toolbar page"
    >
      <div
        class="actionsWrapper"
      >
        <div
          class="actions"
        >
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-19"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              format_bold
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-20"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              format_italic
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-21"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              format_underline
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-22"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-23"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              insert_photo
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper button wrapper small fill secondary small"
            id="toolbar-button-24"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              insert_emoticon
            </i>
          </button>
          <button
            aria-disabled="false"
            class="wrapper wrapper ghost small ghost secondary small"
            id="contactFormButton"
            type="button"
          >
            <i
              class="material-icons icon"
            >
              wysiwyg
            </i>
          </button>
          <div
            class="hoverOverlay"
          >
            Add files as attachments
          </div>
          <div
            class="rightSection"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
